--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,11 +1,40 @@
 log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
 
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+#log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 #log4j.appender.CONSOLE.layout.ConversionPattern=- %m%n %C %d %L%n
 
-log4j.appender.LOGFILE=org.apache.log4j.FileAppender
+#log4j.appender.LOGFILE=org.apache.log4j.FileAppender
+#log4j.appender.LOGFILE.File=myLog.log
+#log4j.appender.LOGFILE.Append=true
+#log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.LOGFILE.layout.ConversionPattern=- %m%n %C %d %L%n
+
+# \u914D\u7F6E\u8F93\u51FA\u5230\u63A7\u5236\u53F0\u7684Appender
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %p %c - %m%n
+
+# \u914D\u7F6E\u8F93\u51FA\u5230\u6587\u4EF6\u7684Appender
+log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.File=myLog.log
-log4j.appender.LOGFILE.Append=true
+log4j.appender.LOGFILE.MaxFileSize=5MB
+log4j.appender.LOGFILE.MaxBackupIndex=10
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=- %m%n %C %d %L%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%d [%t] %p %c - %m%n
+
+
+
+
+# \u914D\u7F6E\u4E00\u4E2A\u7279\u5B9A\u7684logger\u6765\u8BB0\u5F55\u5F02\u5E38\u4FE1\u606F\uFF0C\u8FD9\u91CC\u8BBE\u7F6E\u4E3ADEBUG\u7EA7\u522B\uFF0C\u4F46\u4F60\u53EF\u4EE5\u6839\u636E\u9700\u8981\u8C03\u6574
+#log4j.logger.exceptionLogger=exceptionFile
+
+# \u914D\u7F6EexceptionFile appender\uFF0C\u4E13\u95E8\u7528\u4E8E\u8BB0\u5F55\u5F02\u5E38\u4FE1\u606F\u5230\u6587\u4EF6
+#log4j.appender.exceptionFile=org.apache.log4j.RollingFileAppender
+#log4j.appender.exceptionFile.File=exception.log
+#log4j.appender.exceptionFile.MaxFileSize=10MB
+#log4j.appender.exceptionFile.MaxBackupIndex=5
+#log4j.appender.exceptionFile.layout=org.apache.log4j.PatternLayout
+#log4j.appender.exceptionFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n %throwable
+
+# \u6CE8\u610F\uFF1A%throwable\u662Flog4j\u7684\u4E00\u4E2A\u8F6C\u6362\u8BCD\uFF0C\u7528\u4E8E\u8F93\u51FA\u5F02\u5E38\u7684\u5806\u6808\u8DDF\u8E2A\u4FE1\u606F
